[tool.poetry]
name = "repl_python3_Obotma"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
youtube_dl = "^2021.6.6"
Flask = "^2.0.1"
PyNaCl = "^1.4.0"
replit = "^3.2.4"
schedule = "^1.1.0"
pytz = "^2021.1"
opencv-python = "^4.5.3"
pytesseract = "^0.3.8"
pyocr = "^0.8"
better-profanity = "^0.7.0"
emojis = "^0.6.0"
emoji = "^1.7.0"
tinydb = "^4.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
